--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "algoliasearch": "^4.14.2",
+    "html-react-parser": "^3.0.4",
+    "instantsearch.css": "^7.4.5",
     "jotai": "^1.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
+    "react-instantsearch-hooks-web": "^6.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
@@ -58,11 +63,14 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/lodash": "^4.14.182",
     "@types/mixpanel-browser": "^2.38.0",
+    "@types/react-html-parser": "^2.0.2",
     "autoprefixer": "^10.4.7",
+    "css-loader": "^6.7.2",
     "playwright": "^1.23.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "react-test-renderer": "^16.14.0",
+    "style-loader": "^3.3.1",
     "ts-node": "^10.8.2"
   }
 }
