--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   ],
   "dependencies": {
     "@contentstack/app-sdk": "^1.1.1",
+    "@contentstack/management": "^1.6.1",
     "@contentstack/venus-components": "^1.0.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "algoliasearch": "^4.14.2",
+    "contentstack": "^3.15.5",
     "html-react-parser": "^3.0.4",
     "instantsearch.css": "^7.4.5",
     "jotai": "^1.7.3",
@@ -22,6 +24,7 @@
     "react-instantsearch-hooks-web": "^6.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "request": "^2.88.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -64,6 +67,7 @@
     "@types/lodash": "^4.14.182",
     "@types/mixpanel-browser": "^2.38.0",
     "@types/react-html-parser": "^2.0.2",
+    "@types/request": "^2.48.8",
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.2",
     "playwright": "^1.23.1",
